hphp/hack/test/typecheck/case_type/recursive/indirect_opaque.php.exp
ERROR: File "indirect_opaque.php--file1.php", line 3, characters 11-11:
Cyclic type definition (Typing[4498])
  File "indirect_opaque.php--file2.php", line 3, characters 26-26:
  Cyclic use is here
